--- a/package.json
+++ b/package.json
@@ -12,7 +12,27 @@
     "start:dr": "cross-env NODE_ENV=disaster-recovery concurrently \"npm run build:watch\" \"npm run dev:watch\"",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "dev:watch": "nodemon --watch dist --ext js --exec \"node -r tsconfig-paths/register dist/index.js\""
+    "dev:watch": "nodemon --watch dist --ext js --exec \"node -r tsconfig-paths/register dist/index.js\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    }
   },
   "author": "E2O",
   "license": "ISC",
@@ -26,12 +46,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@jest/globals": "^29.7.0",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "concurrently": "^8.2.2",
@@ -40,8 +63,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.2",
